--- a/Histogram_FeatureExtraction_DistanceCalculation.ipynb
+++ b/Histogram_FeatureExtraction_DistanceCalculation.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
        "[1305 rows x 8 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1926,13 +1926,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subF1\n",
-    "subF2\n",
-    "subF3"
+    "subF1 = pd.DataFrame(columns = col)\n",
+    "subF2 = pd.DataFrame(columns = col)\n",
+    "subF3 = pd.DataFrame(columns = col)\n",
+    "intra = intra_data.copy()\n",
+    "inter = inter_data.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import random\n",
+    "#for i in range(0,len(intra),9):\n",
+    "#    rands = random.sample(range(i, i+8), 3)\n",
+    "#    for rand in rands:\n",
+    "#        subF1 = subF1.append(intra.iloc[rand])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(intra_data)):\n",
+    "    if(i%3==0):\n",
+    "        subF1 = subF1.append(intra_data.iloc[i],ignore_index=True)\n",
+    "    if(i%3==1):\n",
+    "        subF2 = subF2.append(intra_data.iloc[i],ignore_index=True)\n",
+    "    if(i%3==2):\n",
+    "        subF3 = subF3.append(intra_data.iloc[i],ignore_index=True)\n",
+    "\n",
+    "        \n",
+    "for i in range(len(inter_data)):\n",
+    "    if(i%3==0):\n",
+    "        subF1 = subF1.append(inter_data.iloc[i],ignore_index=True)\n",
+    "    if(i%3==1):\n",
+    "        subF2 = subF2.append(inter_data.iloc[i],ignore_index=True)\n",
+    "    if(i%3==2):\n",
+    "        subF3 = subF3.append(inter_data.iloc[i],ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "svm1 = pd.DataFrame(columns = col)\n",
+    "rands = random.sample(range(0, 435), 400)\n",
+    "for rand in rands:\n",
+    "    svm1 = svm1.append(subF1.iloc[rand],ignore_index=True)\n",
+    "    \n",
+    "rands = random.sample(range(435, 13969), 600)\n",
+    "for rand in rands:\n",
+    "    svm1 = svm1.append(subF1.iloc[rand],ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(svm1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = svm1.drop(['Subjects','Subject','Type'], axis=1)\n",
+    "y = svm1[\"Type\"]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SVC(C=1.0, kernel = 'rbf', degree=3, gamma='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 79  42]\n",
+      " [ 34 145]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test, prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.70      0.65      0.68       121\n",
+      "         1.0       0.78      0.81      0.79       179\n",
+      "\n",
+      "   micro avg       0.75      0.75      0.75       300\n",
+      "   macro avg       0.74      0.73      0.73       300\n",
+      "weighted avg       0.74      0.75      0.75       300\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, prediction))"
    ]
   },
   {
@@ -1941,203 +2132,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Subject</th>\n",
-       "      <th>Test</th>\n",
-       "      <th>Channel</th>\n",
-       "      <th>Mean</th>\n",
-       "      <th>Median</th>\n",
-       "      <th>StdDev</th>\n",
-       "      <th>Mean/StdDev</th>\n",
-       "      <th>Skew</th>\n",
-       "      <th>Kurt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Non-VR</td>\n",
-       "      <td>CH 4</td>\n",
-       "      <td>-0.068208</td>\n",
-       "      <td>-0.517472</td>\n",
-       "      <td>14.434473</td>\n",
-       "      <td>-0.004725</td>\n",
-       "      <td>1.316522</td>\n",
-       "      <td>5.056971</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Non-VR</td>\n",
-       "      <td>CH 4</td>\n",
-       "      <td>-0.012372</td>\n",
-       "      <td>-0.943863</td>\n",
-       "      <td>15.375900</td>\n",
-       "      <td>-0.000805</td>\n",
-       "      <td>1.078233</td>\n",
-       "      <td>3.371943</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Non-VR</td>\n",
-       "      <td>CH 4</td>\n",
-       "      <td>0.565839</td>\n",
-       "      <td>-1.058164</td>\n",
-       "      <td>26.411628</td>\n",
-       "      <td>0.021424</td>\n",
-       "      <td>1.095669</td>\n",
-       "      <td>19.624886</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Non-VR</td>\n",
-       "      <td>CH 4</td>\n",
-       "      <td>-0.160820</td>\n",
-       "      <td>-0.480998</td>\n",
-       "      <td>21.041409</td>\n",
-       "      <td>-0.007643</td>\n",
-       "      <td>0.041788</td>\n",
-       "      <td>4.170985</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Non-VR</td>\n",
-       "      <td>CH 4</td>\n",
-       "      <td>0.089703</td>\n",
-       "      <td>0.040681</td>\n",
-       "      <td>10.104452</td>\n",
-       "      <td>0.008878</td>\n",
-       "      <td>0.036522</td>\n",
-       "      <td>0.288857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Non-VR</td>\n",
-       "      <td>CH 4</td>\n",
-       "      <td>0.629839</td>\n",
-       "      <td>-1.698092</td>\n",
-       "      <td>22.765657</td>\n",
-       "      <td>0.027666</td>\n",
-       "      <td>1.428419</td>\n",
-       "      <td>6.606959</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Non-VR</td>\n",
-       "      <td>CH 4</td>\n",
-       "      <td>-0.117710</td>\n",
-       "      <td>-2.009736</td>\n",
-       "      <td>19.084164</td>\n",
-       "      <td>-0.006168</td>\n",
-       "      <td>1.558791</td>\n",
-       "      <td>7.180748</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Non-VR</td>\n",
-       "      <td>CH 4</td>\n",
-       "      <td>0.060331</td>\n",
-       "      <td>-0.138440</td>\n",
-       "      <td>8.332155</td>\n",
-       "      <td>0.007241</td>\n",
-       "      <td>0.164305</td>\n",
-       "      <td>0.321048</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Non-VR</td>\n",
-       "      <td>CH 4</td>\n",
-       "      <td>-0.053651</td>\n",
-       "      <td>-2.251293</td>\n",
-       "      <td>15.775350</td>\n",
-       "      <td>-0.003401</td>\n",
-       "      <td>1.681859</td>\n",
-       "      <td>5.094941</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Non-VR</td>\n",
-       "      <td>CH 4</td>\n",
-       "      <td>0.019763</td>\n",
-       "      <td>-2.238591</td>\n",
-       "      <td>14.743021</td>\n",
-       "      <td>0.001341</td>\n",
-       "      <td>1.156896</td>\n",
-       "      <td>2.669465</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Subject    Test Channel      Mean    Median     StdDev  Mean/StdDev  \\\n",
-       "20       3  Non-VR    CH 4 -0.068208 -0.517472  14.434473    -0.004725   \n",
-       "21       3  Non-VR    CH 4 -0.012372 -0.943863  15.375900    -0.000805   \n",
-       "22       3  Non-VR    CH 4  0.565839 -1.058164  26.411628     0.021424   \n",
-       "23       3  Non-VR    CH 4 -0.160820 -0.480998  21.041409    -0.007643   \n",
-       "24       3  Non-VR    CH 4  0.089703  0.040681  10.104452     0.008878   \n",
-       "25       3  Non-VR    CH 4  0.629839 -1.698092  22.765657     0.027666   \n",
-       "26       3  Non-VR    CH 4 -0.117710 -2.009736  19.084164    -0.006168   \n",
-       "27       3  Non-VR    CH 4  0.060331 -0.138440   8.332155     0.007241   \n",
-       "28       3  Non-VR    CH 4 -0.053651 -2.251293  15.775350    -0.003401   \n",
-       "29       3  Non-VR    CH 4  0.019763 -2.238591  14.743021     0.001341   \n",
-       "\n",
-       "        Skew       Kurt  \n",
-       "20  1.316522   5.056971  \n",
-       "21  1.078233   3.371943  \n",
-       "22  1.095669  19.624886  \n",
-       "23  0.041788   4.170985  \n",
-       "24  0.036522   0.288857  \n",
-       "25  1.428419   6.606959  \n",
-       "26  1.558791   7.180748  \n",
-       "27  0.164305   0.321048  \n",
-       "28  1.681859   5.094941  \n",
-       "29  1.156896   2.669465  "
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn import svm"
-   ]
   },
   {
    "cell_type": "code",
