--- a/Histogram_Dichotomizor_SVM.ipynb
+++ b/Histogram_Dichotomizor_SVM.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<mne.utils.use_log_level at 0x1064570f0>"
+       "<mne.utils.use_log_level at 0x10f3a3278>"
       ]
      },
      "execution_count": 1,
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "#Add new featres in feature list and again in getFeatures method's \"flist\"\n",
-    "feature_list = ['Mean', 'Median', 'StdDev','Mean/StdDev','Skew','Kurt', 'PSD Mean', 'PSE']\n",
+    "feature_list = ['Mean', 'Median', 'StdDev','Mean/StdDev','Skew','Kurt']\n",
     "columns = ['Subject','Test', 'Channel', *feature_list]"
    ]
   },
@@ -71,13 +71,9 @@
     "            mos = mean/std\n",
     "            skew = ds.skew()[0]\n",
     "            kurt = ds.kurt()[0]\n",
-    "            freqs, psd = signal.welch(ds[0], 128, nperseg=256) #nperseg is 2*sf\n",
-    "            \n",
-    "            psd_mean = psd[:61].mean()  \n",
-    "            pse = entropy(psd)\n",
     "            \n",
     "            #add new features here too \n",
-    "            flist = [mean, median, std, mos, skew, kurt, psd_mean, pse]\n",
+    "            flist = [mean, median, std, mos, skew, kurt]\n",
     "            features = features.append(pd.Series(flist, index=feature_list), ignore_index=True)\n",
     "        except:\n",
     "            continue\n",
@@ -129,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,12 +259,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def svmTest(svm):\n",
-    "    X = svm.drop(['Subject','Type','PSD Mean'], axis=1)\n",
+    "    X = svm.drop(['Subject','Type'], axis=1)\n",
     "    y = svm[\"Type\"]\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)\n",
     "    \n",
@@ -282,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -292,46 +288,46 @@
      "output_type": "stream",
      "text": [
       "Test 1:\n",
-      "[[333 145]\n",
-      " [123 299]]\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.73      0.70      0.71       478\n",
-      "         1.0       0.67      0.71      0.69       422\n",
-      "\n",
-      "   micro avg       0.70      0.70      0.70       900\n",
-      "   macro avg       0.70      0.70      0.70       900\n",
-      "weighted avg       0.70      0.70      0.70       900\n",
-      "\n",
-      "Accuracy: 0.7022222222222222\n",
-      "\n",
-      "Test 2:\n",
-      "[[373 105]\n",
+      "[[330 148]\n",
       " [117 305]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.76      0.78      0.77       478\n",
-      "         1.0       0.74      0.72      0.73       422\n",
+      "         0.0       0.74      0.69      0.71       478\n",
+      "         1.0       0.67      0.72      0.70       422\n",
+      "\n",
+      "   micro avg       0.71      0.71      0.71       900\n",
+      "   macro avg       0.71      0.71      0.71       900\n",
+      "weighted avg       0.71      0.71      0.71       900\n",
+      "\n",
+      "Accuracy: 0.7055555555555556\n",
+      "\n",
+      "Test 2:\n",
+      "[[368 110]\n",
+      " [111 311]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.77      0.77      0.77       478\n",
+      "         1.0       0.74      0.74      0.74       422\n",
       "\n",
       "   micro avg       0.75      0.75      0.75       900\n",
       "   macro avg       0.75      0.75      0.75       900\n",
       "weighted avg       0.75      0.75      0.75       900\n",
       "\n",
-      "Accuracy: 0.7533333333333333\n",
+      "Accuracy: 0.7544444444444445\n",
       "\n",
       "Test All:\n",
-      "[[690 218]\n",
-      " [257 635]]\n",
+      "[[668 240]\n",
+      " [260 632]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.73      0.76      0.74       908\n",
-      "         1.0       0.74      0.71      0.73       892\n",
+      "         0.0       0.72      0.74      0.73       908\n",
+      "         1.0       0.72      0.71      0.72       892\n",
       "\n",
-      "   micro avg       0.74      0.74      0.74      1800\n",
-      "   macro avg       0.74      0.74      0.74      1800\n",
-      "weighted avg       0.74      0.74      0.74      1800\n",
+      "   micro avg       0.72      0.72      0.72      1800\n",
+      "   macro avg       0.72      0.72      0.72      1800\n",
+      "weighted avg       0.72      0.72      0.72      1800\n",
       "\n",
-      "Accuracy: 0.7361111111111112\n"
+      "Accuracy: 0.7222222222222222\n"
      ]
     }
    ],
