--- a/PSDHistogram_Dichotomizor_SVM.ipynb
+++ b/PSDHistogram_Dichotomizor_SVM.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<mne.utils.use_log_level at 0x11176b240>"
+       "<mne.utils.use_log_level at 0x107640208>"
       ]
      },
      "execution_count": 1,
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "#Add new featres in feature list and again in getFeatures method's \"flist\"\n",
-    "feature_list = ['PSD Mean', 'PSD Median', 'PSD StdDev','PSD Mean/StdDev','PSD Skew','PSD Kurt', 'PSE']\n",
+    "feature_list = ['PSD Mean', 'PSD Median', 'PSD StdDev','PSD CoV','PSD Skew','PSD Kurt', 'PSE']\n",
     "columns = ['Subject','Test', 'Channel', *feature_list]"
    ]
   },
@@ -67,7 +67,7 @@
     "            \n",
     "            freq, psd = signal.welch(ds[0], 128, nperseg=256) #nperseg is 2*sf\n",
     "            \n",
-    "            dp = pd.DataFrame(psd[:61])\n",
+    "            dp = pd.DataFrame(psd[:41])\n",
     "            mean = dp.mean()[0]\n",
     "            median = dp.median()[0]\n",
     "            std = dp.std()[0]\n",
@@ -91,7 +91,16 @@
     "            fl[k] = f[feature][j]\n",
     "            k+=1\n",
     "        data = data.append(pd.Series([i, 'VR', 'CH 4', *fl], index=columns), ignore_index=True)\n",
-    "    return data"
+    "    return data\n",
+    "\n",
+    "def getDiff(df):\n",
+    "    diffDF = df.copy()\n",
+    "    if('Subject' in df.columns):\n",
+    "        diffDF.drop(['Subject'], axis=1, inplace=True)\n",
+    "        diffDF.drop(['Test'], axis=1, inplace=True)\n",
+    "        diffDF.drop(['Channel'], axis=1, inplace=True)\n",
+    "    diffDF = diffDF.diff().dropna()\n",
+    "    return diffDF"
    ]
   },
   {
@@ -103,33 +112,40 @@
     "#Test 1\n",
     "#testtype = VR or Non-VR\n",
     "df1 = pd.DataFrame(columns = columns)\n",
-    "df2 = pd.DataFrame(columns = columns)\n",
     "for i in range(1,33):\n",
     "    data = loadRawData(i,\"VR\")\n",
-    "    f = getFeatures(raw=data, time=(55,110))\n",
-    "    df1 = getDataFrame(f,df1)\n",
-    "    \n",
-    "    f = getFeatures(raw=data, time=(110,165))\n",
-    "    df2 = getDataFrame(f,df2)"
+    "    f = getFeatures(raw=data, time=(60,120))\n",
+    "    df1 = getDataFrame(f,df1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#feature_list = ['PSD Mean', 'PSD Median', 'PSD StdDev','PSD CoV','PSD Skew','PSD Kurt', 'PSE', \n",
+    "#                'Dif1 PSD Mean', 'Dif1 PSD Median', 'Dif1 PSD StdDev','Dif1 PSD CoV','Dif1 PSD Skew','Dif1 PSD Kurt', 'Dif1 PSE',\n",
+    "#                'Dif2 PSD Mean', 'Dif2 PSD Median', 'Dif2 PSD StdDev','Dif2 PSD CoV','Dif2 PSD Skew','Dif2 PSD Kurt', 'Dif2 PSE']\n",
+    "#columns = ['Subject','Test', 'Channel', *feature_list]\n",
+    "\n",
+    "#df = pd.concat([df1, df2, df3], axis=1)\n",
+    "#df.columns = columns\n",
+    "#df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,70 +191,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#15 min to run both (6 fetures), 18 min (8 features) - 4/17\n",
-    "intra1, inter1 = distanceCalculation(df1)\n",
-    "intra2, inter2 = distanceCalculation(df2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 1:\n",
-      "Intra length: 1595\n",
-      "Inter length: 49126\n",
-      "Sample 2:\n",
-      "Intra length: 1595\n",
-      "Inter length: 49126\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Sample 1:\")\n",
-    "print(\"Intra length: \"+str(len(intra1)))\n",
-    "print(\"Inter length: \"+str(len(inter1)))\n",
-    "print(\"Sample 2:\")\n",
-    "print(\"Intra length: \"+str(len(intra2)))\n",
-    "print(\"Inter length: \"+str(len(inter2)))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "#takes subframe and returns a more managble table for SVM\n",
-    "def get_SVM_Table(intra, inter):\n",
-    "    svmTable = pd.DataFrame()\n",
-    "    rands = random.sample(range(0, len(intra)), 1500)\n",
-    "    for rand in rands:\n",
-    "        svmTable = svmTable.append(intra.iloc[rand],ignore_index=True)\n",
-    "    \n",
-    "    rands = random.sample(range(0, len(inter)), 1500)\n",
-    "    for rand in rands:\n",
-    "        svmTable = svmTable.append(inter.iloc[rand],ignore_index=True)\n",
-    "    return svmTable"
+    "#15 min to run both (6 fetures), 18 min (8 features) - 4/17\n",
+    "intra1, inter1 = distanceCalculation(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intra length: 1914\n",
+      "Inter length: 58464\n"
+     ]
+    }
+   ],
    "source": [
-    "svm1 = get_SVM_Table(intra1,inter1)\n",
-    "svm2 = get_SVM_Table(intra2,inter2)"
+    "print(\"Intra length: \"+str(len(intra1)))\n",
+    "print(\"Inter length: \"+str(len(inter1)))"
    ]
   },
   {
@@ -247,12 +224,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_svm = pd.concat([svm1, svm2], ignore_index=True)"
+    "import random\n",
+    "random.seed(1234)\n",
+    "#takes subframe and returns a more managble table for SVM\n",
+    "def get_SVM_Table(intra, inter):\n",
+    "    svmTable = pd.DataFrame()\n",
+    "    rands = random.sample(range(0, len(intra)), 1800)\n",
+    "    for rand in rands:\n",
+    "        svmTable = svmTable.append(intra.iloc[rand],ignore_index=True)\n",
+    "    \n",
+    "    rands = random.sample(range(0, len(inter)), 1800)\n",
+    "    for rand in rands:\n",
+    "        svmTable = svmTable.append(inter.iloc[rand],ignore_index=True)\n",
+    "    return svmTable"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm1 = get_SVM_Table(intra1,inter1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#all_svm = pd.concat([svm1, svm2], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,17 +279,19 @@
     "    y = svm[\"Type\"]\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)\n",
     "    \n",
-    "    model = SVC(C=1.0, kernel = 'rbf', degree=3, gamma=0.1)\n",
+    "    model = SVC(C=1.0, kernel = 'rbf', degree=3, gamma='auto')\n",
     "    model.fit(X_train, y_train)\n",
     "    prediction = model.predict(X_test)\n",
-    "    print(confusion_matrix(y_test, prediction))\n",
+    "    confusionMatrix = confusion_matrix(y_test, prediction)\n",
+    "    print(confusionMatrix)\n",
     "    print(classification_report(y_test, prediction))\n",
-    "    print(\"Accuracy: \"+str(accuracy_score(y_test, prediction)))"
+    "    print(\"Accuracy: \"+str(accuracy_score(y_test, prediction)))\n",
+    "    return confusionMatrix, model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -291,67 +300,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test 1:\n",
-      "[[342 136]\n",
-      " [112 310]]\n",
+      "[[402 151]\n",
+      " [163 364]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.75      0.72      0.73       478\n",
-      "         1.0       0.70      0.73      0.71       422\n",
+      "         0.0       0.71      0.73      0.72       553\n",
+      "         1.0       0.71      0.69      0.70       527\n",
       "\n",
-      "   micro avg       0.72      0.72      0.72       900\n",
-      "   macro avg       0.72      0.73      0.72       900\n",
-      "weighted avg       0.73      0.72      0.72       900\n",
+      "   micro avg       0.71      0.71      0.71      1080\n",
+      "   macro avg       0.71      0.71      0.71      1080\n",
+      "weighted avg       0.71      0.71      0.71      1080\n",
       "\n",
-      "Accuracy: 0.7244444444444444\n",
-      "\n",
-      "Test 2:\n",
-      "[[358 120]\n",
-      " [ 94 328]]\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.79      0.75      0.77       478\n",
-      "         1.0       0.73      0.78      0.75       422\n",
-      "\n",
-      "   micro avg       0.76      0.76      0.76       900\n",
-      "   macro avg       0.76      0.76      0.76       900\n",
-      "weighted avg       0.76      0.76      0.76       900\n",
-      "\n",
-      "Accuracy: 0.7622222222222222\n",
-      "\n",
-      "Test All:\n",
-      "[[641 267]\n",
-      " [241 651]]\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.73      0.71      0.72       908\n",
-      "         1.0       0.71      0.73      0.72       892\n",
-      "\n",
-      "   micro avg       0.72      0.72      0.72      1800\n",
-      "   macro avg       0.72      0.72      0.72      1800\n",
-      "weighted avg       0.72      0.72      0.72      1800\n",
-      "\n",
-      "Accuracy: 0.7177777777777777\n"
+      "Accuracy: 0.7092592592592593\n"
      ]
     }
    ],
    "source": [
-    "print('Test 1:')\n",
-    "svmTest(svm1)\n",
-    "print('')\n",
-    "print('Test 2:')\n",
-    "svmTest(svm2)\n",
-    "print('')\n",
-    "print('Test All:')\n",
-    "svmTest(all_svm)"
+    "cm, model = svmTest(svm1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False Acceptance: 0.1398148148148148\n",
+      "False Rejection: 0.15092592592592594\n",
+      "0.7092592592592593\n"
+     ]
+    }
+   ],
+   "source": [
+    "TN = cm[0][0]\n",
+    "FN = cm[1][0]\n",
+    "TP = cm[1][1]\n",
+    "FP = cm[0][1]\n",
+    "sums = TN+TP+FN+FP\n",
+    "\n",
+    "acc = (TN+TP)/sums\n",
+    "\n",
+    "print('False Acceptance: '+str(FP/sums))\n",
+    "print('False Rejection: '+str(FN/sums))\n",
+    "print(acc)"
+   ]
   },
   {
    "cell_type": "code",
