--- a/PSDHistogram_Dichotomizer_SVM_WithDiff.ipynb
+++ b/PSDHistogram_Dichotomizer_SVM_WithDiff.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
     "def get_SVM_Table(intra, inter):\n",
     "    svmTable = pd.DataFrame()\n",
     "    len1 = (len(intra)//100)*100\n",
-    "    len2 = (len1/2)*3\n",
+    "    len2 = (len1//2)*3\n",
     "    rands = random.sample(range(0, len(intra)), len1)\n",
     "    for rand in rands:\n",
     "        svmTable = svmTable.append(intra.iloc[rand],ignore_index=True)\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,49 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[108  74]\n",
-      " [ 50 168]]\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.68      0.59      0.64       182\n",
-      "         1.0       0.69      0.77      0.73       218\n",
-      "\n",
-      "   micro avg       0.69      0.69      0.69       400\n",
-      "   macro avg       0.69      0.68      0.68       400\n",
-      "weighted avg       0.69      0.69      0.69       400\n",
-      "\n",
-      "Accuracy: 0.69\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vr_cm, vr_model = svmTest(svm1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False Acceptance: 0.185\n",
-      "False Rejection: 0.125\n",
-      "0.69\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "TN = vr_cm[0][0]\n",
     "FN = vr_cm[1][0]\n",
@@ -393,41 +364,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#nvr_cm, nvr_model = svmTest(svm2)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False Acceptance: 0.13606060606060605\n",
-      "False Rejection: 0.1290909090909091\n",
-      "0.7348484848484849\n"
-     ]
-    }
-   ],
-   "source": [
-    "TN = nvr_cm[0][0]\n",
-    "FN = nvr_cm[1][0]\n",
-    "TP = nvr_cm[1][1]\n",
-    "FP = nvr_cm[0][1]\n",
-    "sums = TN+TP+FN+FP\n",
-    "\n",
-    "acc = (TN+TP)/sums\n",
-    "\n",
-    "print('False Acceptance: '+str(FP/sums))\n",
-    "print('False Rejection: '+str(FN/sums))\n",
-    "print(acc)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
